--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -83,6 +83,11 @@ html {
   font-weight: normal;
 }
 
+.sidebar-about .logo {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* Sidebar nav */
 .sidebar-nav {
   margin-bottom: 1rem;
@@ -250,7 +255,7 @@ a.sidebar-nav-item:focus {
 }
 
 .lead {
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 
 .page, .post {
@@ -276,7 +281,8 @@ a.sidebar-nav-item:focus {
   padding: 0;
   list-style-type: none; }
   
-.sidebar-social {}
+.sidebar-social {
+  margin-bottom: 1rem; }
   .sidebar-social a {
     padding: 6px 8px 6px 9px; }
     .sidebar-social a .label {
