--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,10 @@ comments: true
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
+  {% if page.cover_image %}
+  <img src="{{ page.cover_image }}" alt="{{ page.title }}">
+  {% endif %}
+
   {{ content }}
 </div>
 
@@ -31,12 +35,8 @@ comments: true
   <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
       <li>
-        <h3>
-          <a href="{{ post.url }}">
-            {{ post.title }}
-            <small>{{ post.date | date_to_string }}</small>
-          </a>
-        </h3>
+        <h3 style="display: inline;"><a href="{{ post.url }}">{{ post.title }}</a></h3>
+        <small>{{ post.date | date_to_string }}</small>
       </li>
     {% endfor %}
   </ul>
