--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -331,6 +331,7 @@ a.sidebar-nav-item:focus {
   border-radius: 4px;
   min-height: 300px;
   background-size: cover;
+  background-position: center;
   position: relative;
   margin-bottom: .5rem;
 }
