--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -60,23 +60,21 @@ html {
 }
 @media (min-width: 48em) {
   .sidebar {
+    display: block;
     position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
     width: 30%;
-    text-align: left;
+    height: 100%;
+    display: table;
   }
 }
 
 @media (min-width: 64em) {
   .sidebar {
+    display: block;
     position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
     width: 20rem;
-    text-align: left;
+    height: 100%;
+    display: table;
   }
 }
 
@@ -122,10 +120,9 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 48em) {
   .sidebar-sticky {
-    position: absolute;
-    right:  1rem;
-    bottom: 1rem;
-    left:   1rem;
+    display: table-cell;
+    vertical-align: middle;
+    position: relative;
   }
 }
 
@@ -294,14 +291,14 @@ a.sidebar-nav-item:focus {
   
 .navigation__item {
   display: inline-block;
-  margin: 0 1px 0 0;
+  margin: 1px;
   line-height: 1em; }  
       
 .navigation__item a {
   display: block;
   position: relative;
   border: 1px solid #FFF;
-  border-radius: 20px;
+  border-radius: 50%;
   font-weight: bold;
   letter-spacing: 1px;
   text-shadow: none;
