--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,25 @@
       {{ page.title }} &middot; {{ site.title }}
     {% endif %}
   </title>
+  
+  {% if page.cover_image %}
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image:src" content="{{ site.url }}{{ page.cover_image }}">
+  {% else %}
+  <meta name="twitter:card" content="summary">
+  {% endif %}
+  <meta name="twitter:title" content="{{ page.title }} &middot; {{ site.title }}">
+  <meta name="twitter:description" content="{{ page.excerpt | strip_html }}">
+  <meta name="twitter:site" content="{{ site.twitter }}">
+  {% if page.title == "Home" %}
+  <meta property="og:title" content="{{ site.title }}">
+  <meta property="twitter:title" content="{{ site.title }}">
+  {% else %}
+  <meta property="og:title" content="{{ page.title }}">
+  <meta property="twitter:title" content="{{ page.title }}">
+  {% endif %}
+  <meta property="og:type" content="article">
+  <meta property="og:description" content="{{ page.excerpt | strip_html }}">
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/poole.css">
@@ -27,14 +46,5 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
-  
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-41899870-1', 'auto');
-    ga('send', 'pageview');
-  </script>
   
 </head>
