--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -22,11 +22,9 @@
 
       {% assign pages_list = site.pages %}
       {% for node in pages_list %}
-        {% if node.title != null %}
-          {% if node.layout == "page" %}
+        {% if node.title != null %}{% if node.layout == "page" %}
             <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
-          {% endif %}
-        {% endif %}
+        {% endif %}{% endif %}
       {% endfor %}
       
           </nav>
@@ -38,7 +36,7 @@
 
   <!-- Twitter -->
   <li class="navigation__item">
-    <a href="http://twitter.com/chrisbanes" title="@chrisbanes on Twitter" target="_blank">
+    <a href="http://twitter.com/{{ site.twitter }}" title="{{ site.twitter }} on Twitter" target="_blank">
       <i class='icon fi-social-twitter'></i>
       <span class="label">Twitter</span>
     </a>
