--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -35,7 +35,7 @@
 
 
   <!-- Twitter -->
-  <li class="navigation__item">
+  <li class="social-item twitter">
     <a href="http://twitter.com/{{ site.twitter }}" title="{{ site.twitter }} on Twitter" target="_blank">
       <i class='icon fi-social-twitter'></i>
       <span class="label">Twitter</span>
@@ -43,7 +43,7 @@
   </li>
 
   <!-- Google+ -->
-  <li class="navigation__item">
+  <li class="social-item gplus">
     <a href="http://plus.google.com/103829716466878605055?rel=author" title="+ChrisBanes" target="_blank">
       <i class='icon fi-social-google-plus'></i>
       <span class="label">Google+</span>
@@ -51,15 +51,23 @@
   </li>
 
   <!-- GitHub -->
-  <li class="navigation__item">
+  <li class="social-item github">
     <a href="http://github.com/chrisbanes" title="@chrisbanes on GitHub" target="_blank">
       <i class='icon fi-social-github'></i>
       <span class="label">GitHub</span>
     </a>
   </li>
+  
+  <!-- StackOverflow -->
+  <li class="social-item stackoverflow">
+    <a href="http://stackoverflow.com/users/474997/chris-banes" title="Chris Banes on StackOverflow" target="_blank">
+      <i class='icon fi-social-stack-overflow'></i>
+      <span class="label">StackOverflow</span>
+    </a>
+  </li>
 
   <!-- Foursquare -->
-  <li class="navigation__item">
+  <li class="social-item foursquare">
     <a href="http://foursquare.com/chrisbanes" title="Chris Banes on foursquare" target="_blank">
       <i class='icon fi-social-foursquare'></i>
       <span class="label">foursquare</span>
@@ -67,7 +75,7 @@
   </li>
 
     <!-- LinkedIn -->
-    <li class="navigation__item">
+    <li class="social-item linkedin">
       <a href="http://uk.linkedin.com/in/chrisbanes/" title="Chris Banes on LinkedIn" target="_blank">
         <i class='icon fi-social-linkedin'></i>
         <span class="label">LinkedIn</span>
@@ -75,8 +83,8 @@
     </li>
 
     <!-- Email -->
-    <li class="navigation__item">
-      <a href="mailto:chris@banes.me" title="Email chris@banes.me">
+    <li class="social-item mail">
+      <a href="mailto:chris@banes.me" title="Email me">
         <i class='icon fi-mail'></i>
         <span class="label">Email</span>
       </a>
