--- a/_includes/poole.css
+++ b/_includes/poole.css
@@ -404,8 +404,7 @@ tbody tr:nth-child(odd) th {
 
 .pagination {
   overflow: hidden; /* clearfix */
-  margin-left: -1rem;
-  margin-right: -1rem;
+  margin: 3rem 0;
   color: #ccc;
   text-align: center;
 }
@@ -415,9 +414,8 @@ tbody tr:nth-child(odd) th {
   display: block;
   padding: 1rem;
   border: 1px solid #eee;
-}
-.pagination-item:first-child {
-  margin-bottom: -1px;
+  float: left;
+  width: 47%;
 }
 
 /* Only provide a hover state for linked pagination items */
@@ -425,22 +423,15 @@ a.pagination-item:hover {
   background-color: #f5f5f5;
 }
 
-@media (min-width: 30em) {
-  .pagination {
-    margin: 3rem 0;
-  }
-  .pagination-item {
-    float: left;
-    width: 50%;
-  }
-  .pagination-item:first-child {
-    margin-bottom: 0;
-    border-top-left-radius:    4px;
-    border-bottom-left-radius: 4px;
-  }
-  .pagination-item:last-child {
-    margin-left: -1px;
-    border-top-right-radius:    4px;
-    border-bottom-right-radius: 4px;
-  }
+.pagination-item:first-child {
+  margin-bottom: 0;
+  margin-left: 3%;
+  border-top-left-radius:    4px;
+  border-bottom-left-radius: 4px;
+}
+.pagination-item:last-child {
+  margin-left: -1px;
+  margin-right: 3%;
+  border-top-right-radius:    4px;
+  border-bottom-right-radius: 4px;
 }
