Add theme-color meta tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,6 +45,8 @@
   <meta property="description" content="{{ site.description }}">
   {% endif %}
 
+  <meta name="theme-color" content="#009688">
+
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/site.css">
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lato:400,700|Fjalla+One">
