Tweak theme-color

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,7 +45,7 @@
   <meta property="description" content="{{ site.description }}">
   {% endif %}
 
-  <meta name="theme-color" content="#009688">
+  <meta name="theme-color" content="#00796B">
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/site.css">
