--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,7 +49,7 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/site.css">
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lato:400,700|Fjalla+One">
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Fira+Sans|Fira+Mono|Fjalla+One">
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/content/apple-touch-icon-144x144.png" />
