--- a/_includes/poole.css
+++ b/_includes/poole.css
@@ -84,7 +84,7 @@ a:focus {
 
 /* Headings */
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Fjalla One", "Roboto Condensed", Roboto, sans-serif;
+  font-family: "Raleway", "Roboto Condensed", Roboto, sans-serif;
   margin-top: .8rem;
   margin-bottom: .6rem;
   font-weight: normal;
@@ -98,7 +98,7 @@ h1 {
 }
 h2 {
   margin-top: 1rem;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
 }
 h3 {
   margin-top: 1.5rem;
@@ -155,12 +155,12 @@ abbr[title] {
 
 /* Code */
 pre {
-  font-family: "Fira Mono", Menlo, Monaco, "Courier New", monospace;
+  font-family: "Oxygen Mono", Menlo, Monaco, "Courier New", monospace;
   overflow: auto;
   padding: 1em 2.5%;
 }
 code {
-  font-family: "Fira Mono", Menlo, Monaco, "Courier New", monospace;
+  font-family: "Oxygen Mono", Menlo, Monaco, "Courier New", monospace;
   padding: .25em .5em;
   font-size: 90%;
   color: #bf616a;
