--- a/_includes/hyde.css
+++ b/_includes/hyde.css
@@ -38,7 +38,12 @@ html {
     font-size: 16px;
   }
 }
-@media (min-width: 58em) {
+@media (min-width: 64em) {
+  html {
+    font-size: 18px;
+  }
+}
+@media (min-width: 80em) {
   html {
     font-size: 20px;
   }
@@ -75,11 +80,22 @@ html {
   .sidebar {
     display: block;
     position: fixed;
+    width: 25%;
+    height: 100%;
+    display: table;
+  }
+}
+
+@media (min-width: 80em) {
+  .sidebar {
+    display: block;
+    position: fixed;
     width: 20rem;
     height: 100%;
     display: table;
   }
 }
+
 
 /* Sidebar links */
 .sidebar a {
@@ -149,7 +165,13 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 64em) {
   .content {
-    margin-left: 23rem;
+    margin-left: 25%;
+  }
+}
+
+@media (min-width: 80em) {
+  .content {
+    margin-left: 22rem;
   }
 }
 
