--- a/_includes/poole.css
+++ b/_includes/poole.css
@@ -155,14 +155,14 @@ abbr[title] {
 
 /* Code */
 pre {
-  font-family: "Oxygen Mono", Menlo, Monaco, "Courier New", monospace;
+  font-family: "Roboto Mono", Menlo, Monaco, "Courier New", monospace;
   overflow: auto;
   padding: 1em 2.5%;
 }
 code {
-  font-family: "Oxygen Mono", Menlo, Monaco, "Courier New", monospace;
+  font-family: "Roboto Mono", Menlo, Monaco, "Courier New", monospace;
   padding: .25em .5em;
-  font-size: 85%;
+  font-size: 90%;
   color: #bf616a;
   background-color: #f3f3f3;
   border-radius: 3px;
