--- a/_includes/hyde.css
+++ b/_includes/hyde.css
@@ -60,11 +60,11 @@ html {
 .sidebar {
   text-align: center;
   padding: 2rem 1rem;
-  color: rgba(255,255,255,.5);
-  background: -webkit-linear-gradient(#009688, #00695C);
-  background: -o-linear-gradient(#009688, #00695C);
-  background: -moz-linear-gradient(#009688, #00695C);
-  background: linear-gradient(#009688, #00695C);
+  color: rgba(255,255,255,.5); 
+  background: -webkit-linear-gradient(#666fae, #555fa6);
+  background: -o-linear-gradient(#666fae, #555fa6);
+  background: -moz-linear-gradient(#666fae, #555fa6);
+  background: linear-gradient(#666fae, #555fa6);
 }
 @media (min-width: 48em) {
   .sidebar {
