fixed favicon icon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,14 +52,15 @@
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Karla|Roboto+Mono|Raleway:700">
 
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/content/apple-touch-icon-144x144.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/content/apple-touch-icon-152x152.png" />
-  <link rel="icon" type="image/png" href="/content/favicon-196x196.png" sizes="196x196" />
-  <link rel="icon" type="image/png" href="/content/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="/content/favicon-16x16.png" sizes="16x16" />
-  <meta name="application-name" content="Chris Banes"/>
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/content/icons/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/content/icons/apple-touch-icon-152x152.png" />
+  <link rel="icon" type="image/png" href="/content/icons/favicon-196x196.png" sizes="196x196" />
+  <link rel="icon" type="image/png" href="/content/icons/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="/content/icons/favicon-16x16.png" sizes="16x16" />
+  <link rel="SHORTCUT ICON" href="/content/icons/favicon1.ico" />
+  <meta name="application-name" content="Anirudh Ramanan"/>
   <meta name="msapplication-TileColor" content="#00796B" />
-  <meta name="msapplication-TileImage" content="/content/mstile-144x144.png" />
+  <meta name="msapplication-TileImage" content="/content/icons/mstile-144x144.png" />
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
